--- a/amazon.html
+++ b/amazon.html
@@ -59,6 +59,6 @@
 
     <script src="data/cart.js"></script>
     <script src="data/products.js"></script>
-    <script src="scripts/amazon.js"></script>
+    <script type="module" src="scripts/amazon.js"></script> <!--type module lets you use import/export-->
   </body>
 </html>
