Refactor cart and money utility: load cart from storage on initialization, update test paths, and add new tests for cart functionality

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -3,6 +3,7 @@
 
 <head></head>
 <body>
-    <script src="moneyTests.js" type="module"></script>
+    <script src="utils/moneyTests.js" type="module"></script>
+    <script src="data/cartTest.js" type="module"></script>
 </body>
 </html>
