--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -16,10 +16,14 @@
   <script src="utils/moneyTests.js" type="module"></script>
   <script src="data/cartTest.js" type="module"></script>
 
+  <script src="checkout/orderSummaryTest.js" type="module"></script>
 
 
 </head>
 
 <body>
+  <div class="js-test-container">
+
+  </div>
 </body>
 </html>
