--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -13,16 +13,17 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
-  <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <script src="utils/moneyTests.js" type="module"></script>
+  <script src="data/cartTest.js" type="module"></script>
 
-  <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="checkout/orderSummaryTest.js" type="module"></script>
+
 
 </head>
 
 <body>
+  <div class="js-test-container">
+
+  </div>
 </body>
 </html>
